# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my_workflow.yml
gendiff/: generate_diff.py  generator.py  parser.py
gendiff/format/: choice_formatter.py
gendiff/formatters/: choice_formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff_package/: __init__.py  generate_diff.py  parser.py
gendiff_package/format/: choice_formatter.py
gendiff_package/scripts/: gendiff.py
tests/: test_file_read.py  test_generate_diff.py  test_generator.py  test_json.py  test_plain.py  test_stylish.py  test_utils.py
